--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 stages:
   - name: "Test"
   - name: "Deploy"
-    if: tag IS present AND env(TRAVIS_NODE_VERSION) IS "10"
+    if: tag IS present AND env(TRAVIS_NODE_VERSION) = "10"
 jobs:
   include:
     - stage: "Test"
