--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,7 @@
     "/src/"
   ],
   "scripts": {
-    "preversion": "git pull && yarn test",
+    "preversion": "git pull && yarn test && yarn gen-defs",
     "version": "node bin/bump-dependencies.js && yarn && git add package.json yarn.lock",
     "postversion": "git push && git push --tags",
     "test": "mocha -t 20000 --recursive test",
@@ -27,6 +27,7 @@
     "lambda-integration-test": "mocha -t 10000 integration-test --lambda",
     "smoke-test": "mocha -t 120000 smoke-test",
     "lint": "eslint src test",
+    "gen-defs": "node bin/genDefs.js",
     "build-integration-test": "bin/build.sh local.bundle.zip",
     "upload-integration-test": "bin/upload-lambda.js local.bundle.zip",
     "deploy-integration-test": "yarn build-integration-test && yarn upload-integration-test",
@@ -52,6 +53,7 @@
     "adm-zip": "0.4.14",
     "aws-sdk": "^2",
     "fs-extra": "^9",
+    "json-schema-to-typescript": "9.1.1",
     "mock-fs": "^4"
   },
   "optionalDependencies": {
