improve logging for debugging info

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -94,6 +94,7 @@
     ],
     "hooks": {
       "init": [
+        "./src/oclif/hooks/versionInfo",
         "./src/oclif/hooks/deprecated",
         "./src/oclif/hooks/updateNotifier",
         "./src/oclif/hooks/checkValidNodeVersion",
