--- a/packages/schema/package.json
+++ b/packages/schema/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "^9.0.0",
     "istanbul": "0.4.5",
     "markdown-toc": "^1",
+    "mocha": "^7",
     "node-fetch": "^2"
   }
 }
