--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^5.0.0",
-    "husky": "^4",
+    "husky": "^5.1.3",
     "inquirer": "^8.0.0",
     "lerna": "^4.0.0",
     "lint-staged": "^10.5.4",
@@ -28,7 +28,8 @@
     "lint:fix": "lerna run lint:fix",
     "lint-examples": "eslint examples",
     "validate": "lerna run validate",
-    "bump": "./scripts/bump.js"
+    "bump": "./scripts/bump.js",
+    "prepare": "husky install"
   },
   "husky": {
     "hooks": {
