--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,6 +40,7 @@
   },
   "engineStrict": true,
   "dependencies": {
+    "@zapier/secret-scrubber": "^1.0.1",
     "bluebird": "3.7.2",
     "content-disposition": "0.5.3",
     "dotenv": "9.0.2",
