--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "packages/*"
   ],
   "scripts": {
+    "test": "yarn workspaces run test",
+    "smoke-test": "yarn workspaces run smoke-test",
     "lint": "lerna run lint",
     "lint:fix": "lerna run lint:fix",
     "lint-examples": "eslint examples",
