--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,6 +43,7 @@
     "dotenv": "8.1.0",
     "form-data": "2.5.0",
     "lodash": "4.17.15",
+    "mime-types": "2.1.34",
     "node-fetch": "2.6.0",
     "oauth-sign": "0.9.0",
     "semver": "5.6.0",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "adm-zip": "0.4.13",
     "aws-sdk": "2.238.1",
+    "dicer": "0.3.0",
     "fs-extra": "8.1.0",
     "mock-fs": "4.10.1"
   },
