--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ before_install:
   - npm install -g yarn
   - pip install --user awscli
 install:
-  - yarn install
+  - yarn install --production=false
 script:
   - yarn validate
 notifications:
